--- a/app_server/views/task-info.pug
+++ b/app_server/views/task-info.pug
@@ -11,4 +11,8 @@ block content
   p
     strong Interval: 
     | #{task.interval || '—'}
+  if task && task.attachment
+    p
+      strong Attachment: 
+      a(href=`/api/gridfs/files/${task.attachment}` target='_blank') #{task.attachmentFilename || 'Download'}
   a.btn.btn-secondary(href='/') Back
